feat: actualización modelo https://github.com/udistrital/planeacion_cliente/issues/1136
